<resources>
    <string name="app_name">Exercise Customizer</string>
    <string name="login">Login</string>
    <string name="textView1">No Account? <a>Register</a> here</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="add_an_exercise">Add an Exercise</string>
    <string name="enter_exercise_name">Enter Exercise Name</string>
    <string name="add_repetitions">Add Repetitions</string>
    <string name="add_instructions">Add Instructions</string>

    <string name="add_exercise">Add Exercise</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="exercises">Exercises</string>
    <string name="add_notes">Add Notes</string>
    <string name="go_to_list">Go to List</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="your_exercises">Your Exercises</string>
    <string name="logout">Logout</string>
    <string name="list_of_exercises">List of Exercises</string>
    <string name="title_activity_upload">UploadActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="add_image_name">Add Image Name</string>
    <string name="add_video_link">Add Video Link</string>
    <string name="back">Back</string>
    <string name="view_your_profile">View your Profile</string>
</resources>