<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add"
        android:title="@string/add_an_exercise"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/list_of_exercises"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/your_exercises"
        android:title="@string/your_exercises"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/app_bar_logout"
        android:title="@string/logout"
        app:actionViewClass="android.widget.SearchView" />


</menu>